# django_profile

./: .coverage  .gitignore  MANIFEST.in  README.md  pytest.ini  setup.cfg  setup.py
django_profile/: admin.py  apps.py  custom_registration.py  django_profile  forms.py  models.py  urls.py  views.py
django_profile.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  requires.txt  top_level.txt
django_profile/migrations/: 0001_initial.py
django_profile/templates/django_profile/: profile_update_form.html
django_profile/testapp/: pip_requirements.txt  settings.py  urls.py
django_profile/tests/: conftest.py
django_profile/tests/functional_tests/features/profile/: profile.feature
django_profile/tests/functional_tests/features/profile/steps/: test_profile.py
django_profile/tests/unit_tests/: conftest.py  test_forms.py  test_views.py
