[metadata]
name = django_profile
version = 1.0
data_files=[],
description = "A Django app that extends the django_users app, and adds a profile and templates for forms for auth user fields as well as the profile."
long_description = file: README.md
long_description_content_type='text/markdown'
url = https://github.com/millerthegorilla/django_profile
author = James Miller
author_email = jamesstewartmiller@gmail.com
license = MiT  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2  # Replace "X.Y" as appropriate
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = True
packages = find:
python_requires = >=3.8
